--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,7 +13,10 @@
     
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/fffb4aa0e0.js" crossorigin="anonymous"></script>
+
+    <!-- Own links -->
     <link rel="stylesheet" href="/views/styles.css">
+    <script src="/views/home.js"></script>
 
     <!-- Modal Ingresar-->
     <div class="modal fade" id="modal_login" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
