--- a/app/views/home.html
+++ b/app/views/home.html
@@ -185,10 +185,11 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
         <!-- Contenedor cards -->
         <div class="container">
                 <h3>Productos agregados con DOM</h3>
-            <div class="row" id="newProducts">
+            <div class="row" id="productsContainer">
 
             </div>
             <hr>
