input number modal

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -186,11 +186,30 @@
             </button>
         </div>
 
+        <!-- Cantidad para un producto Modal -->
+        <div class="modal fade" id="productAmountModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Cantidad a agregar (producto):</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="number">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-success">Guardar</button>
+                </div>
+                </div>
+            </div>
+        </div>
+
+
         <!-- Contenedor cards -->
         <div class="container">
                 <h3>Productos agregados con DOM</h3>
             <div class="row" id="productsContainer">
-
             </div>
             <hr>
         </div>        
