--- a/app/views/home.html
+++ b/app/views/home.html
@@ -195,7 +195,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <input type="number">
+                    <div class="col-lg-8 col-sm-12">
+                        <input type="number" class="form-control" aria-label="Amount" min="1">
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
