--- a/app/views/home.html
+++ b/app/views/home.html
@@ -196,7 +196,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="col-lg-8 col-sm-12">
-                        <input type="number" class="form-control" aria-label="Amount" min="1">
+                        <form>
+                            <input type="number" class="form-control" aria-label="Amount" min="1" value="1">
+                        </form>
                     </div>
                 </div>
                 <div class="modal-footer">
