Modals and title added. To do: Make an addEventListener when 'Save changes' is pressed and update session storage

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -196,14 +196,12 @@
                 </div>
                 <div class="modal-body">
                     <div class="col-lg-8 col-sm-12">
-                        <form>
-                            <input type="number" class="form-control" aria-label="Amount" min="1" value="1">
-                        </form>
+                            <input type="number" class="form-control" aria-label="Amount" min="1" value="1" placeholder="¿Cuántos álbumes llevarás?">
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-success">Guardar</button>
+                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">Guardar</button>
                 </div>
                 </div>
             </div>
