--- a/app/views/home.html
+++ b/app/views/home.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">Guardar</button>
+                    <button id="saveProductsButtonModal" type="button" class="btn btn-success" data-bs-dismiss="modal">Guardar</button>
                 </div>
                 </div>
             </div>
