--- a/app/views/home.html
+++ b/app/views/home.html
@@ -112,7 +112,7 @@
         <!-- Nav bar -->
         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(40,44,52);">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/P_01/P01_index.html"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
+                <a class="navbar-brand" href="/views/home.html"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -146,7 +146,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/P_01/P01_cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a class="nav-link active" aria-current="page" href="localhost:3000/"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </div>
