Shopping Cart HTML

--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -169,6 +169,42 @@
                     </form>
             </div>
         </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-8 col-sm-12">
+                <div class="media border p-3">
+                    <img class="me-5 mt-4 rounded" style="float: right; width: 100px;"src="https://m.media-amazon.com/images/I/91dTLHSQdkL._UF894,1000_QL80_.jpg" alt="Title" >
+                    <div class="media-body">
+                        <h4>Producto A <a role="button" class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></a></h4>
+                        <div class="input-group mb-3 w-50">
+                            <span class="input-group-text">Cantidad: </span>
+                            <input value="2" type="number" class="form-control" name="" required>
+                        </div>
+                        <div class="input-group mb-3 w-50">
+                            <span class="input-group-text">Precio: </span>
+                            <input value="20.00" type="number" class="form-control" name="" required>
+                            <span class="input-group-text">MXN</span>
+                        </div>
+                    </div>
+                </div> 
+                <div class="media border p-3">
+                    <img class="me-5 mt-4 rounded" style="float: right; width: 100px;"src="https://i.scdn.co/image/ab67616d0000b273aaeb5c9fb6131977995b7f0e" alt="Title" >
+                    <div class="media-body">
+                        <h4>Producto B <a role="button" class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></a></h4>
+                        <div class="input-group mb-3 w-50">
+                            <span class="input-group-text">Cantidad: </span>
+                            <input value="5" type="number" class="form-control" name="" id="email_field" required>
+                        </div>
+                        <div class="input-group mb-3 w-50">
+                            <span class="input-group-text">Precio: </span>
+                            <input value="30.00" type="number" class="form-control" name="" id="email_field" required>
+                            <span class="input-group-text">MXN</span>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+
+        </div>
     </div>
 
   </main>
