SessionStorage function added Shopping cart

--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -170,7 +170,7 @@
             </div>
         </div>
         <hr>
-        <div class="row">
+        <div id="productsContainer" class="row">
             <div class="col-lg-8 col-sm-12">
                 <div class="media border p-3">
                     <img class="me-5 mt-4 rounded" style="float: right; width: 100px;"src="https://m.media-amazon.com/images/I/91dTLHSQdkL._UF894,1000_QL80_.jpg" alt="Title" >
