--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -13,7 +13,7 @@
 
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/fffb4aa0e0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="/views/shopping_cart.js"></script>
 
     <!-- Modal Ingresar-->
     <div class="modal fade" id="modal_login" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
