--- a/app/views/home.html
+++ b/app/views/home.html
@@ -146,7 +146,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="localhost:3000/"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a class="nav-link active" aria-current="page"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </div>
