--- a/app/views/home.html
+++ b/app/views/home.html
@@ -14,7 +14,7 @@
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/fffb4aa0e0.js" crossorigin="anonymous"></script>
 
-    <!-- Own links -->
+    <!-- My own links -->
     <link rel="stylesheet" href="/views/styles.css">
     <script src="/views/home.js"></script>
 
