--- a/app/views/home.html
+++ b/app/views/home.html
@@ -16,6 +16,7 @@
 
     <!-- My own links -->
     <link rel="stylesheet" href="/views/styles.css">
+    <script src="/views/utils_cart.js"></script>
     <script src="/views/home.js"></script>
 
     <!-- Modal Ingresar-->
