--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -13,6 +13,7 @@
 
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/fffb4aa0e0.js" crossorigin="anonymous"></script>
+    <script src="/views/utils_cart.js"></script>
     <script src="/views/shopping_cart.js"></script>
 
     <!-- Modal Ingresar-->
@@ -64,7 +65,7 @@
 </head>
 
 <body>
-  <header>
+    <header>
 
         <!-- Nav bar -->
         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(40,44,52);">
@@ -110,9 +111,9 @@
             </div>
         </nav>
         <!-- Nav bar -->
+    </header>
 
-  </header>
-  <main>
+    <main>
 
     <div class="container" style="padding: 15px">
         <div class="row">
@@ -149,61 +150,35 @@
                 </div> 
             </div>
             <div class="col-lg-3 col-sm-12 p-3 border">
-                    <form>
-                        <!-- Selección de p en lugar de <span> ya que es inline-->
-                        <div class="cart-info">
-                            <h3>Total de compra:</h3>
-                            <p><b>Producto A</b> 2 x 20.00 MXN</p>
-                            <p><b>Producto B</b> 5 x 30.00 MXN</p>
-                            <p><b>Costo de envío</b> 60.00 MXN</p>
-                            <h5>Total: 250.00 MX</h5>
+                <form>
+                    <!-- Selección de p en lugar de <span> ya que es inline-->
+                    <div class="cart-info">
+                        <h3>Total de compra:</h3>
+                        <p><b>Producto A</b> 2 x 20.00 MXN</p>
+                        <p><b>Producto B</b> 5 x 30.00 MXN</p>
+                        <p><b>Costo de envío</b> 60.00 MXN</p>
+                        <h5>Total: 250.00 MX</h5>
+                    </div>
+                    <div class="cart-buttons" style="text-align: center;">
+                        <div class="mb-3">
+                            <button class="btn btn-primary" type="submit">Pagar</button>
                         </div>
-                        <div class="cart-buttons" style="text-align: center;">
-                            <div class="mb-3">
-                                <button class="btn btn-primary" type="submit">Pagar</button>
-                            </div>
-                            <div class="mt-3">
-                                <button class="btn btn-danger">Cancelar</button>
-                            </div>
+                        <div class="mt-3">
+                            <button class="btn btn-danger">Cancelar</button>
                         </div>
-                    </form>
+                    </div>
+                </form>
             </div>
         </div>
-        <hr>
-        <div id="productsContainer" class="row">
-            <div class="col-lg-8 col-sm-12">
-                <div class="media border p-3">
-                    <img class="me-5 mt-4 rounded" style="float: right; width: 100px;"src="https://m.media-amazon.com/images/I/91dTLHSQdkL._UF894,1000_QL80_.jpg" alt="Title" >
-                    <div class="media-body">
-                        <h4>Producto A <a role="button" class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></a></h4>
-                        <div class="input-group mb-3 w-50">
-                            <span class="input-group-text">Cantidad: </span>
-                            <input value="2" type="number" class="form-control" name="" required>
-                        </div>
-                        <div class="input-group mb-3 w-50">
-                            <span class="input-group-text">Precio: </span>
-                            <input value="20.00" type="number" class="form-control" name="" required>
-                            <span class="input-group-text">MXN</span>
-                        </div>
-                    </div>
-                </div> 
-                <div class="media border p-3">
-                    <img class="me-5 mt-4 rounded" style="float: right; width: 100px;"src="https://i.scdn.co/image/ab67616d0000b273aaeb5c9fb6131977995b7f0e" alt="Title" >
-                    <div class="media-body">
-                        <h4>Producto B <a role="button" class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></a></h4>
-                        <div class="input-group mb-3 w-50">
-                            <span class="input-group-text">Cantidad: </span>
-                            <input value="5" type="number" class="form-control" name="" id="email_field" required>
-                        </div>
-                        <div class="input-group mb-3 w-50">
-                            <span class="input-group-text">Precio: </span>
-                            <input value="30.00" type="number" class="form-control" name="" id="email_field" required>
-                            <span class="input-group-text">MXN</span>
-                        </div>
-                    </div>
-                </div> 
-            </div>
+    </div>
 
+    <!-- New div -->
+
+    <div class="container" style="padding: 15px">
+        <div class="row">
+            <div id="productsContainer" class="col-lg-8 col-sm-12">
+
+            </div>
         </div>
     </div>
 
