PricePerUnit fixed (now displaying amount) and styles.css added

--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -16,6 +16,9 @@
     <script src="/views/utils_cart.js"></script>
     <script src="/views/shopping_cart.js"></script>
 
+    <!-- My own links -->
+    <link rel="stylesheet" href="/views/styles.css">
+
     <!-- Modal Ingresar-->
     <div class="modal fade" id="modal_login" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
