--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -73,7 +73,7 @@
         <!-- Nav bar -->
         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(40,44,52);">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/P_01/P01_index.html"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
+                <a class="navbar-brand" href="http://localhost:3000/"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
