--- a/app/views/home.html
+++ b/app/views/home.html
@@ -222,21 +222,13 @@
     <footer>
         <!-- place footer here -->
         <nav aria-label="page navigation">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-            </li>
-            <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-            <a class="page-link" href="#" aria-label="next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-            </li>
-        </ul>
+            <ul id="paginatorContainer" class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" aria-label="previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
