--- a/app/views/home.html
+++ b/app/views/home.html
@@ -222,7 +222,7 @@
     <footer>
         <!-- place footer here -->
         <nav aria-label="page navigation">
-            <ul id="paginatorContainer" class="pagination justify-content-center">
+            <ul id="paginatorContainer" class="pagination justify-content-center" data-previous="1">
                 <li class="page-item disabled">
                     <a class="page-link" href="#" aria-label="previous">
                         <span aria-hidden="true">&laquo;</span>
