Changes before deleting an item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -223,8 +223,8 @@
         <!-- place footer here -->
         <nav aria-label="page navigation">
             <ul id="paginatorContainer" class="pagination justify-content-center" data-previous="1">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="previous">
+                <li class="page-item">
+                    <a id="page-previous" class="page-link disabled" href="javascript: paginatorPrevious()" aria-label="previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
