--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -129,11 +129,10 @@
                     <div class="cart-info">
                         <h3>Total de compra:</h3>
                         <hr>
-                        <p><b>Producto A</b> 2 x 20.00 MXN</p>
-                        <p><b>Producto B</b> 5 x 30.00 MXN</p>
-                        <p><b>Costo de envío</b> 60.00 MXN</p>
+                        <div id="totalContainer">
+                        </div>
                         <hr>
-                        <h5>Total: 250.00 MX</h5>
+                        <h5 >Total: <span id="totalCantidad"></span>MX</h5>
                     </div>
                     <div class="cart-buttons" style="text-align: center;">
                         <div class="mb-3">
