--- a/app/views/categoryA.html
+++ b/app/views/categoryA.html
@@ -12,7 +12,7 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/fffb4aa0e0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/views/styles.css">
     <!-- Modal Ingresar-->
     <div class="modal fade" id="modal_login" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
@@ -68,7 +68,7 @@
         <!-- Nav bar -->
         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(40,44,52);">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/P_01/P01_index.html"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
+                <a class="navbar-brand" href="http://localhost:3000"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -102,7 +102,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/P_01/P01_cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/shopping_cart"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </div>
