--- a/app/views/categoryB.html
+++ b/app/views/categoryB.html
@@ -69,22 +69,22 @@
          <!-- Nav bar -->
         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(40,44,52);">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/P_01/P01_index.html"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
+                <a class="navbar-brand" href="http://localhost:3000"><i class="fa-solid fa-compact-disc fa-xl"></i> Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="P01_abouts_us.html">Sobre nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/about_us">Sobre nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Productos 
                             </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="P01_cat_A.html">Categoría A</a></li>
-                            <li><a class="dropdown-item" href="P01_cat_B.html">Categoría B</a></li>
+                            <li><a class="dropdown-item" href="http://localhost:3000/categoryA">Categoría A</a></li>
+                            <li><a class="dropdown-item" href="http://localhost:3000/categoryB">Categoría B</a></li>
                         </ul>
                         </li>
                         <li class="nav-item ms-5">
@@ -103,7 +103,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/P_01/P01_cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/shopping_cart"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </div>
