--- a/app/views/shopping_cart.html
+++ b/app/views/shopping_cart.html
@@ -80,15 +80,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="P01_abouts_us.html">Sobre nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/about_us">Sobre nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Productos 
                             </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="P01_cat_A.html">Categoría A</a></li>
-                            <li><a class="dropdown-item" href="P01_cat_B.html">Categoría B</a></li>
+                            <li><a class="dropdown-item" href="http://localhost:3000/categoryA">Categoría A</a></li>
+                            <li><a class="dropdown-item" href="http://localhost:3000/categoryB">Categoría B</a></li>
                         </ul>
                         </li>
                         <li class="nav-item ms-5">
@@ -107,7 +107,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/P_01/P01_cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/shopping_cart"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </div>
