--- a/app/views/home.html
+++ b/app/views/home.html
@@ -147,7 +147,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" onclick="loadToServer()"><i class="fa-solid fa-cart-shopping"></i></a>
+                            <a class="nav-link active" type="button" aria-current="page" onclick="loadToServer()"><i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
                     </ul>
                 </div>
